# tiny-math

./: CMakeLists.txt  README.md  library.h  test.cpp
lib/: math.h  tinymath_mat.h  tinymath_mat_math.h  tinymath_math.h  tinymath_vec.h  tinymath_vec_math.h  vector.h
